# OpenDigimonMastersOnline

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: discord-webhook.yml
READMEs/: README.es-ES.md  README.pt-BR.md
crates/: README.md
crates/odmo-application/: Cargo.toml
crates/odmo-application/src/: account.rs  character.rs  game.rs  lib.rs  portal.rs
crates/odmo-application/tests/: property_tests.rs
crates/odmo-persistence/: Cargo.toml
crates/odmo-persistence/migrations/: 001_accounts.sql  002_servers.sql  003_characters.sql  004_world.sql  005_portal.sql  006_partner_slots.sql  007_digi_summon.sql  008_extra_evolution.sql  009_combine_catalogs.sql  010_encyclopedia.sql  011_union_hacks.sql  012_server_asset_catalogs.sql  013_digimon_asset_catalog.sql
crates/odmo-persistence/src/: lib.rs
crates/odmo-persistence/src/pg/: account_repo.rs  asset_repo.rs  character_repo.rs  combine_repo.rs  digi_summon_repo.rs  drop_repo.rs  extra_evolution_repo.rs  mob_repo.rs  mod.rs  npc_shop_repo.rs  portal_bridge.rs  portal_repo.rs  random_box_repo.rs
crates/odmo-persistence/tests/: combine_catalog.rs
crates/odmo-protocol/: Cargo.toml
crates/odmo-protocol/src/: account.rs  character.rs  error.rs  game.rs  lib.rs  opcode.rs  reader.rs  writer.rs
crates/odmo-protocol/tests/: property_tests.rs
crates/odmo-types/: Cargo.toml
crates/odmo-types/src/: lib.rs
data/server-assets/: digimon_assets.json  digimon_assets.source.json  evolution_assets.json  item_assets.json  item_assets.source.json
services/: README.md
services/odmo-account-service/: Cargo.toml
services/odmo-account-service/src/: main.rs
services/odmo-character-service/: Cargo.toml
services/odmo-character-service/src/: main.rs
services/odmo-game-service/: Cargo.toml
services/odmo-game-service/src/: main.rs
src/Source/Infra/ODMO.Infrastructure/DatabaseContext/: DatabaseContext.cs
tests/: README.md
