[workspace]
resolver = "2"
members = [
    "crates/odmo-types",
    "crates/odmo-protocol",
    "crates/odmo-application",
    "crates/odmo-persistence",
    "services/odmo-account-service",
    "services/odmo-character-service",
    "services/odmo-game-service",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["ODMO"]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
