[package]
name = "odmo-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
odmo-protocol = { path = "../odmo-protocol" }
odmo-types = { path = "../odmo-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
