[package]
name = "odmo-persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
csv = "1"
dashmap.workspace = true
roxmltree = "0.20"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
odmo-application = { path = "../odmo-application" }
odmo-types = { path = "../odmo-types" }
