[package]
name = "odmo-game-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
odmo-application = { path = "../../crates/odmo-application" }
odmo-persistence = { path = "../../crates/odmo-persistence" }
odmo-protocol = { path = "../../crates/odmo-protocol" }
odmo-types = { path = "../../crates/odmo-types" }
